--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     </div>
 
-    <script src="/diceGame/javaScript.js" charset="utf-8"></script>
+    <script src="/diceGame/java.js" charset="utf-8"></script>
 
       </body>
     </html>
