--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Dicee</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/diceGame/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
 
   </head>
@@ -22,7 +22,7 @@
     </div>
   </div>
 
-    <script src="index.js" charset="utf-8"></script>
+    <script src="/diceGame/java.js" charset="utf-8"></script>
   <div class="buttonDiv">
     <button onClick="window.location.reload();">Refresh Page</button>
   </div>
